added colab link

--- a/notebooks/hawk_dove_dynamics.ipynb
+++ b/notebooks/hawk_dove_dynamics.ipynb
@@ -8,15 +8,20 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-20T19:30:50.886817Z",
-     "start_time": "2025-07-20T19:30:50.870227Z"
-    }
-   },
    "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Install required packages (from requirements.txt hosted on GitHub)\n",
+    "!pip install -q -r https://raw.githubusercontent.com/Socrats/ic2s2-tutorial/main/requirements.txt"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "import numpy as np\n",
     "# Plotting libraries\n",
